K8s-dev-cluster/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-pvc
      containers:
        - name: minio
          volumeMounts:
            - name: data
              mountPath: /data
          image: quay.io/minio/minio
          command:
            - "/bin/sh"
            - "-ce"
            - "/usr/bin/docker-entrypoint.sh minio server /data --address :9000 --console-address :9001"
          ports:
            - name: https
              containerPort: 9000
            - name: https-console
              containerPort: 9001
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 20
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 200Mi
            limits:
              cpu: 50m
              memory: 400Mi
---
kind: Service
apiVersion: v1
metadata:
  name: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - protocol: TCP
      name: minio
      port: 9000
      targetPort: 9000
    - protocol: TCP
      name: minio-console
      port: 9001
      targetPort: 9001
